Fix Bug 310627 - Drag and dropping a link to knotes from Firefox results in invisible text cursor

FIXED-IN: 4.11.3
BUG: 310627

Keep ktextedit makes work.